--- a/templates/superadmin/layouts/header.html
+++ b/templates/superadmin/layouts/header.html
@@ -100,13 +100,13 @@
               </li>
 
               <li class="slide">
-                <a class="side-menu__item has-link" data-bs-toggle="slide" href="{% url 'superadmin:create' 'customer' %}">
+                <a class="side-menu__item has-link" data-bs-toggle="slide" href="{% url 'superadmin:list' 'Customers' %}">
                   <i class="side-menu__icon fe fe-user"></i>
                   <span class="side-menu__label">Customer</span>
                 </a>
               </li>
               <li class="slide">
-                <a class="side-menu__item has-link" data-bs-toggle="slide" href="{% url 'superadmin:create' 'invoice' %}">
+                <a class="side-menu__item has-link" data-bs-toggle="slide" href="{% url 'superadmin:list' 'Invoices' %}">
                   <i class="side-menu__icon fe fe-user"></i>
                   <span class="side-menu__label">Invoice</span>
                 </a>
