--- a/templates/superadmin/create.html
+++ b/templates/superadmin/create.html
@@ -8,7 +8,7 @@
              <div class="page-header">
                  <h1 class="page-title">{{formname|upper}}</h1>
                  <div>
-                     <a class="btn btn-primary" href="{% url 'superadmin:userlist' %}"><i class="side-menu__icon fe fe-eye mx-1"></i>View All</a>
+                     <a class="btn btn-primary" href="{% url 'superadmin:list' formname %}"><i class="side-menu__icon fe fe-eye mx-1"></i>View All</a>
                  </div>
              </div>
              <!-- PAGE-HEADER END -->
@@ -18,7 +18,7 @@
                  <div class="col-md-8 col-xl-8 col-12">
                      <div class="card">
                          <div class="card-body">
-                             <form method="post">
+                             <form method="post" class="form-control">
                                  {% csrf_token %}
                                  {{ form.as_p }}
                                  <button type="submit" class="btn btn-primary mt-4 mb-0" id="submitButton">Submit</button>
