--- a/templates/superadmin/layouts/header.html
+++ b/templates/superadmin/layouts/header.html
@@ -106,6 +106,12 @@
                 </a>
               </li>
               <li class="slide">
+                <a class="side-menu__item has-link" data-bs-toggle="slide" href="{% url 'superadmin:menulist' %}">
+                  <i class="side-menu__icon fe fe-user"></i>
+                  <span class="side-menu__label">Menu</span>
+                </a>
+              </li>
+              <li class="slide">
                 <a class="side-menu__item has-link" data-bs-toggle="slide" href="{% url 'superadmin:list' 'Customers' %}">
                   <i class="side-menu__icon fe fe-user"></i>
                   <span class="side-menu__label">Customer</span>
