--- a/templates/superadmin/layouts/header.html
+++ b/templates/superadmin/layouts/header.html
@@ -100,6 +100,13 @@
               </li>
 
               <li class="slide">
+                <a class="side-menu__item has-link" data-bs-toggle="slide" href="{% url 'superadmin:bannerlist' %}">
+                  <i class="side-menu__icon fe fe-user"></i>
+                  <span class="side-menu__label">Banners</span>
+                </a>
+              </li>
+
+              <li class="slide">
                 <a class="side-menu__item has-link" data-bs-toggle="slide" href="{% url 'superadmin:categorylist' %}">
                   <i class="side-menu__icon fe fe-user"></i>
                   <span class="side-menu__label">Category</span>
@@ -111,18 +118,7 @@
                   <span class="side-menu__label">Menu</span>
                 </a>
               </li>
-              <li class="slide">
-                <a class="side-menu__item has-link" data-bs-toggle="slide" href="{% url 'superadmin:list' 'Customers' %}">
-                  <i class="side-menu__icon fe fe-user"></i>
-                  <span class="side-menu__label">Customer</span>
-                </a>
-              </li>
-              <li class="slide">
-                <a class="side-menu__item has-link" data-bs-toggle="slide" href="{% url 'superadmin:list' 'Invoices' %}">
-                  <i class="side-menu__icon fe fe-user"></i>
-                  <span class="side-menu__label">Invoice</span>
-                </a>
-              </li>
+
             </ul>
             <div class="slide-right" id="slide-right">
               <svg xmlns="http://www.w3.org/2000/svg" fill="#7b8191" width="24" height="24" viewBox="0 0 24 24">
