--- a/templates/superadmin/menu/menu-create.html
+++ b/templates/superadmin/menu/menu-create.html
@@ -65,6 +65,10 @@
                                                     <label for="" class="form-label">Price</label>
                                                     <input type="text" class="form-control" id="" placeholder="Price" name="price" required value="{{data.price}}">
                                                 </div>
+                                                <div class="form-group col-lg-6">
+                                                    <label for="" class="form-label">Description</label>
+                                                    <textarea class="form-control" id="" placeholder="Description" name="description" required >{{data.description}}</textarea>
+                                                </div>
 												
 											<div class="form-group col-lg-12 col-3">
                                             <button class="btn btn-primary mt-4 mb-0" type="submit">Submit</button>
