--- a/templates/superadmin/category/category-create.html
+++ b/templates/superadmin/category/category-create.html
@@ -9,29 +9,65 @@
 
                         <!-- PAGE-HEADER -->
                         <div class="page-header">
-                            <h1 class="page-title">Course</h1>
+                            <h1 class="page-title">Category</h1>
                             <div>
-                                <a class="btn btn-primary" href="course_view.php"><i class="side-menu__icon fe fe-eye mx-1"></i>View All</a>
+                                <a class="btn btn-primary" href="{% url 'superadmin:categorylist' %}"><i class="side-menu__icon fe fe-eye mx-1"></i>View All</a>
                             </div>
                         </div>
                         <!-- PAGE-HEADER END -->
 
                          <!-- ROW OPEN -->
+                        <form method="post" enctype="multipart/form-data">
+                                       {% csrf_token %}
                         <div class="row">
                           
                             
                         
-						
 
-						<div class="col-md-8 col-xl-8 col-12">
-                            <form method="post">
-                                {% csrf_token %}
+                                <div class="col-md-4 col-xl-4 col-12">
+                                <div class="card">
+
+                                    <div class="card-body">
+
+                                            <div class="row">
+											<label for="" class="form-label">Image</label>
+											<div class="col-lg-12 col-sm-12 mb-4 mb-lg-0">
+                                                <input type="file" class="dropify" data-bs-height="180" name="image" {% if not data %} required {% endif %} accept=".jpg,.jpeg,.png" data-default-file="{{data.image.url}}" />
+                                            </div>
+
+                                    </div>
+                                </div>
+
+								</div>
+
+						        </div>
+
+                                <div class="col-md-4 col-xl-4 col-12">
+                                <div class="card">
+
+                                    <div class="card-body">
+
+                                            <div class="row">
+											<label for="" class="form-label">Icon</label>
+											<div class="col-lg-12 col-sm-12 mb-4 mb-lg-0">
+                                                <input type="file" class="dropify" data-bs-height="180" name="icon" {% if not data %} required {% endif %} accept=".jpg,.jpeg,.png" data-default-file="{{data.icon.url}}" />
+                                            </div>
+
+                                    </div>
+                                </div>
+
+								</div>
+
+						        </div>
+						<div class="col-md-6 col-xl-4 col-12">
+
                                 <div class="card">
                                  
                                     <div class="card-body">
                                         
                                             <div class="row">
-												<div class="form-group col-lg-6">
+												<div class="form-group col-lg-12" style="    height: 150px;
+">
                                                     <label for="" class="form-label">Title</label>
                                                     <input type="text" class="form-control" id="" placeholder="Title" name="title" required value="{{data.title}}">
                                                 </div>
@@ -59,4 +95,4 @@
             </div>
             <!--app-content close-->
 			
-{% include 'superadmin/layouts/header.html' %}
+{% include 'superadmin/layouts/footer.html' %}
