--- a/templates/superadmin/layouts/header.html
+++ b/templates/superadmin/layouts/header.html
@@ -107,6 +107,13 @@
               </li>
 
               <li class="slide">
+                <a class="side-menu__item has-link" data-bs-toggle="slide" href="{% url 'superadmin:gallerylist' %}">
+                  <i class="side-menu__icon fe fe-user"></i>
+                  <span class="side-menu__label">Gallery</span>
+                </a>
+              </li>
+
+              <li class="slide">
                 <a class="side-menu__item has-link" data-bs-toggle="slide" href="{% url 'superadmin:categorylist' %}">
                   <i class="side-menu__icon fe fe-user"></i>
                   <span class="side-menu__label">Category</span>
